fixed css and add some CTA

--- a/source/_partials/Main/Coach.ejs
+++ b/source/_partials/Main/Coach.ejs
@@ -83,6 +83,12 @@
 				<% }); %>
 		</div>
 	</div>
+
+	<br><br><br>
+
+	<div class="text-center register-row">
+		<a href="#ss-register" class="btn btn-primary btn-scroll">Đăng ký ngay</a>
+	</div>
 </section>
 
 <% include CoachDialog %>
