--- a/source/_partials/Main/Facility.ejs
+++ b/source/_partials/Main/Facility.ejs
@@ -16,5 +16,9 @@
 				</ul>
 			</div>
 		</div>
+
+		<div class="text-center register-row">
+			<a href="#ss-register" class="btn btn-primary btn-scroll">Đăng ký ngay</a>
+		</div>
 	</div>
 </section>
