--- a/source/assets/scss/sections/_ss-facility.scss
+++ b/source/assets/scss/sections/_ss-facility.scss
@@ -28,10 +28,6 @@
 	list-style: none;
 	padding: 0;
 
-	@include breakpoint(1200, min) {
-		transform: scale(0.8);
-	}
-
 	> li {
 		img {
 			width: 100%;
@@ -48,8 +44,8 @@
 		position: relative;
 		z-index: 0;
 		width: 100%;
-		height: 600px;
-		transform: scale(0.55);
+		height: 500px;
+		transform: scale(0.55) translateY(-100px);
 		> li {
 			position: absolute;
 			background-color: #cccccc;
@@ -93,8 +89,9 @@
 			}
 		}
 	}
-	
+
 	@include breakpoint(1200, min) {
+		transform: scale(0.55) translateY(-180px);
 		> li {
 			&:nth-child(1) {
 				top: 0;
