--- a/source/_partials/Head.ejs
+++ b/source/_partials/Head.ejs
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
 <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
 <meta name="viewport" content="width=500, initial-scale=1">
+<meta property="og:image" content="images/bg-room.min.png" />
 <title>Teekiu Landing page</title>
 <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
 <link rel="stylesheet" href="vendor/css/owl.carousel.min.css">
