--- a/source/assets/scss/sections/_ss-slogan.scss
+++ b/source/assets/scss/sections/_ss-slogan.scss
@@ -6,7 +6,7 @@
 	&::before {
 		content: '';
 		position: absolute;
-		width: 300px;
+		width: 10%;
 		height: 100%;
 		background: #ffffff;
 		z-index: 1;
