--- a/source/_partials/Main/Register.ejs
+++ b/source/_partials/Main/Register.ejs
@@ -34,7 +34,7 @@
 	<img src="images/slogan-model.min.png" alt="slogan model" class="slogan-model">
 	<div class="container slogan-area">
 		<div class="slogan-text">
-			<h1 class="row-1">Love your life</h1>
+			<h1 class="row-1">Love your body</h1>
 			<h1 class="row-2">Live your life</h1>
 		</div>
 	</div>
