--- a/source/_partials/Main/Header.ejs
+++ b/source/_partials/Main/Header.ejs
@@ -11,10 +11,11 @@
 
 	<section id="carousel-top" class="carousel slide" data-ride="carousel">
 		<ol class="carousel-indicators">
-	    <li data-target="#carousel-top" data-slide-to="0" class="active"></li>
-	    <li data-target="#carousel-top" data-slide-to="1"></li>
-	    <li data-target="#carousel-top" data-slide-to="2"></li>
-	  </ol>
+			<li data-target="#carousel-top" data-slide-to="0" class="active"></li>
+			<li data-target="#carousel-top" data-slide-to="1"></li>
+			<li data-target="#carousel-top" data-slide-to="2"></li>
+		</ol>
+
 		<div class="carousel-inner">
 
 
@@ -67,7 +68,15 @@
 					</div>
 				</div>
 			</article>
-
 		</div>
+
+		<a class="carousel-control-prev" href="#carousel-top" role="button" data-slide="prev">
+	    <span class="carousel-control left"><i class="icon icon-caret-left"></i></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carousel-top" role="button" data-slide="next">
+	    <span class="carousel-control right"><i class="icon icon-caret-right"></i></span>
+	    <span class="sr-only">Next</span>
+	  </a>
 	</section>
 </header>
