change name of subject

--- a/source/_partials/Main/Benefit.ejs
+++ b/source/_partials/Main/Benefit.ejs
@@ -8,11 +8,11 @@
     "srcBackground": "images/22.min.jpg"
   },
   {
-    "title": "Yoga",
+    "title": "Aqua Yoga",
     "srcBackground": "images/33.min.jpg"
   },
   {
-    "title": "Yoga Master",
+    "title": "Yoga",
     "srcBackground": "images/44.min.jpg"
   },
   {
