--- a/source/_partials/Main/Header.ejs
+++ b/source/_partials/Main/Header.ejs
@@ -25,7 +25,8 @@
 					<div class="container">
 						<div class="carousel-content-block">
 							<div class="carousel-caption-block">
-								<h1 class="heading">Hãy cùng khám phá gói tập luyện <span class="text-highlight">miễn phí 7 ngày</span> cực chất của TeeKiu</h1>
+								<h1 class="heading"><span class="text-highlight">100%</span> đội ngũ PT <span class="text-highlight">chuyên nghiệp</span></h1>
+								<p>Được đào tạo bài bản có chứng chỉ quốc tế, được đầu tư đầy đủ, hiện đại và có kiến thức rõ ràng nhằm đem lại trải nghiệm tốt nhất cũng như đem lại hiệu quả tập luyện cao nhất.</p>
 								<br><br>
 								<a href="#ss-benefit" class="btn btn-outline btn-scroll">Khám phá ngay</a>
 							</div>
@@ -60,7 +61,7 @@
 						<div class="carousel-content-block">
 							<div class="carousel-caption-block">
 								<h3 class="heading">Cơ sở vật chất <span class="text-highlight">được đầu tư đầy đủ</span> với <span class="text-highlight">kiến thức chuyên sâu</span></h3>
-								<p class="lead"><span class="text-highlight">100%</span> thiết bị tập hàng đầu thế giới như<br>Technogym, Rogue, Les Mills, Boga được <span class="text-highlight">nhập khẩu trực tiếp</span> từ Ý và Mỹ<br>Phòng tập được thiết kế <span class="text-highlight">đạt chuẩn quốc tế</span> với diện tích rộng rãi lên đến 3000 m2</p>
+								<p><span class="text-highlight">100%</span> thiết bị tập hàng đầu thế giới như<br>Technogym, Rogue, Les Mills, Boga được <span class="text-highlight">nhập khẩu trực tiếp</span> từ Ý và Mỹ<br>Phòng tập được thiết kế <span class="text-highlight">đạt chuẩn quốc tế</span> với diện tích rộng rãi lên đến 3000 m2</p>
 								<br><br>
 								<a href="#ss-staff" class="btn btn-outline btn-scroll">Tìm hiểu thêm</a>
 							</div>
