--- a/source/_partials/Main.ejs
+++ b/source/_partials/Main.ejs
@@ -32,7 +32,7 @@
 	<!-- End Section: Register -->
 
 	<!-- Section: Slogan -->
-		<%- include Main/Slogan %>
+		<!-- <%- include Main/Slogan %> -->
 	<!-- End Section: Slogan -->
 
 	<!-- Footer page -->
