--- a/source/assets/scss/sections/_header-page.scss
+++ b/source/assets/scss/sections/_header-page.scss
@@ -13,7 +13,7 @@
     background-size: cover;
     background-position: center;
     &:nth-child(1) {
-      background-image: url('../images/slide-1-bg.min.jpg');
+      background-image: url('../images/Slide 1.min.jpg');
     }
     &:nth-child(2) {
       background-image: url('../images/Slide 1.min.jpg');
