--- a/source/_partials/Main/Footer.ejs
+++ b/source/_partials/Main/Footer.ejs
@@ -7,7 +7,7 @@
 				</div>
 			</div>
 			<div class="col-9">
-				<div class="footer-col-right py-lg-5 py-md-4 py-3">	
+				<div class="footer-col-right py-lg-5 py-md-4 pt-4 pb-3">
 					<address>
 						Tầng 4 – 5, La Thành Plaza, 226 Vạn Phúc, Ba Đình, Hà Nội<br>
 						Phone: +84 3518 5999<br>
