--- a/source/_partials/Main/Header.ejs
+++ b/source/_partials/Main/Header.ejs
@@ -25,13 +25,13 @@
 					<div class="container">
 						<div class="carousel-content-block">
 							<div class="carousel-caption-block">
-								<h1 class="heading"><span class="text-highlight">100%</span> đội ngũ PT <span class="text-highlight">chuyên nghiệp</span></h1>
-								<p>Được đào tạo bài bản có chứng chỉ quốc tế, được đầu tư đầy đủ, hiện đại và có kiến thức rõ ràng nhằm đem lại trải nghiệm tốt nhất cũng như đem lại hiệu quả tập luyện cao nhất.</p>
+								<h1 class="heading">Sứ mệnh của <span class="text-highlight">Teekiu</span></h1>
+								<p>là tạo ra một cộng đồng cùng nhau trải nghiệm, vượt qua những giới hạn của bản thân và làm giàu vốn kiến thức của bạn về tập luyện và sức khỏe mỗi ngày.</p>
 								<br><br>
 								<a href="#ss-benefit" class="btn btn-outline btn-scroll">Khám phá ngay</a>
 							</div>
 
-							<img src="images/slide-1-model.min.png" alt="Model" class="carousel-img-model">
+							<!-- <img src="images/slide-1-model.min.png" alt="Model" class="carousel-img-model"> -->
 						</div>
 					</div>
 				</div>
