--- a/source/assets/scss/sections/_ss-register.scss
+++ b/source/assets/scss/sections/_ss-register.scss
@@ -1,6 +1,5 @@
 .ss-register {
 	padding-top: 60px;
-	padding-bottom: 100px;
 	background: $secondary-color;
 	position: relative;
 	z-index: 1;
@@ -144,4 +143,9 @@
 			font-size: 5rem;
 		}
 	}
+}
+
+.register-slogan {
+	margin-top: -15%;
+	margin-bottom: -20px;
 }
