--- a/source/_partials/Main.ejs
+++ b/source/_partials/Main.ejs
@@ -38,4 +38,10 @@
 	<!-- Footer page -->
 		<%- include Main/Footer %>
 	<!-- End Section: Footer -->
+
+
+	<!-- CTA -->
+	<div class="floating-cta">
+		<a href="#ss-register" class="btn-scroll btn-floating-register"></a>
+	</div>
 </div>
