--- a/source/assets/scss/_utilities.scss
+++ b/source/assets/scss/_utilities.scss
@@ -195,3 +195,62 @@
     }
   }
 }
+
+// Floating button
+.floating-cta {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 999;
+}
+.btn-floating-register {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+  background: #fff;
+  width: 50px;
+  height: 50px;
+  font-weight: bold;
+  box-sizing: border-box;
+  border-radius: 50px;
+  box-shadow: 0px 0px 0px 5px rgba(255,255,255,0.5);
+  color: $primary-color;
+  transition: all 0.3s ease-in-out;
+  text-decoration: none !important;
+  position: relative;
+  overflow: hidden;
+  outline: none!important;
+  &::before {
+    content: '+';
+    transition: all 0.3s ease-in-out;
+    font-size: 40px;
+    width: 100%;
+    text-align: center;
+  }
+  &.hover, &:hover {
+    background: $primary-color;
+    color: $black;
+    box-shadow: 0px 0px 0px 5px rgba($primary-color,0.5);
+    width: 150px;
+    &::before {
+      font-size: 18px;
+      animation: floatingText 0.3s alternate;
+      // animation-delay: 0.3s;
+      animation-timing-function: ease-in;
+      content: 'Đăng ký ngay';
+    }
+  }
+}
+
+@keyframes floatingText {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    content: 'Đăng ký ngay';
+  }
+  100% {
+    opacity: 1;
+  }
+}
