--- a/source/assets/scss/_utilities.scss
+++ b/source/assets/scss/_utilities.scss
@@ -202,6 +202,8 @@
   bottom: 30px;
   right: 30px;
   z-index: 999;
+  border-radius: 50px;
+  box-shadow: 0px 3px 20px rgba(0,0,0,0.2);
 }
 .btn-floating-register {
   display: flex;
