--- a/source/assets/scss/sections/_header-page.scss
+++ b/source/assets/scss/sections/_header-page.scss
@@ -16,7 +16,7 @@
       background-image: url('../images/Slide 1.min.jpg');
     }
     &:nth-child(2) {
-      background-image: url('../images/bg-room.min.png');
+      background-image: url('../images/slide 3.min.jpg');
     }
     &:nth-child(3) {
       background-image: url('../images/Slide 2.min.jpg');
