--- a/source/assets/scss/sections/_header-page.scss
+++ b/source/assets/scss/sections/_header-page.scss
@@ -19,7 +19,7 @@
       background-image: url('../images/slide 3.min.jpg');
     }
     &:nth-child(3) {
-      background-image: url('../images/Slide 2.min.jpg');
+      background-image: url('../images/slide 2.min.jpg');
     }
   }
 }
