--- a/source/_partials/Head.ejs
+++ b/source/_partials/Head.ejs
@@ -9,3 +9,13 @@
 <link rel="stylesheet" href="vendor/css/owl.theme.default.min.css">
 <link rel="stylesheet" href="vendor/css/slick.css">
 <link rel="stylesheet" href="css/main.min.css?v=<%= new Date().getTime() %>">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108442898-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-108442898-1');
+</script>
