--- a/source/_partials/Main/Header.ejs
+++ b/source/_partials/Main/Header.ejs
@@ -21,6 +21,7 @@
 							<div class="carousel-caption-block">
 								<h1 class="heading">Sứ mệnh của <span class="text-highlight">Teekiu</span></h1>
 								<p>là tạo ra một cộng đồng cùng nhau trải nghiệm, vượt qua những giới hạn của bản thân và làm giàu vốn kiến thức của bạn về tập luyện và sức khỏe mỗi ngày.</p>
+								<p class="text-highlight">HỌC CÁCH YÊU BẢN THÂN! SỐNG MỘT CUỘC SỐNG XỨNG ĐÁNG!</p>
 								<br><br>
 								<a href="#ss-benefit" class="btn btn-outline btn-scroll">Khám phá ngay</a>
 							</div>
@@ -54,8 +55,9 @@
 					<div class="container">
 						<div class="carousel-content-block">
 							<div class="carousel-caption-block">
-								<h3 class="heading">Cơ sở vật chất <span class="text-highlight">được đầu tư đầy đủ</span> với <span class="text-highlight">kiến thức chuyên sâu</span></h3>
-								<p><span class="text-highlight">100%</span> thiết bị tập hàng đầu thế giới như<br>Technogym, Rogue, Les Mills, Boga được <span class="text-highlight">nhập khẩu trực tiếp</span> từ Ý và Mỹ<br>Phòng tập được thiết kế <span class="text-highlight">đạt chuẩn quốc tế</span> với diện tích rộng rãi lên đến 3000 m2</p>
+								<h1 class="heading">Cơ sở vật chất <span class="text-highlight">được đầu tư đầy đủ</span> với <span class="text-highlight">kiến thức chuyên sâu</span></h1>
+								<p><span class="text-highlight">100%</span> thiết bị tập hàng đầu thế giới như Technogym, Rogue, Les Mills, Boga được <span class="text-highlight">nhập khẩu trực tiếp</span> từ Ý và Mỹ</p>
+								<p>Phòng tập được thiết kế theo <span class="text-highlight">chuẩn quốc tế</span> với sàn tập cao su chuyên nghiệp được nhập khẩu từ Ý. Diện tích hơn 3000m2 với <span class="text-highlight">không gian thoáng, trần cao</span> 7m sẽ làm hài lòng bất cứ người tập ở trình độ nào.</p>
 								<br><br>
 								<a href="#ss-staff" class="btn btn-outline btn-scroll">Tìm hiểu thêm</a>
 							</div>
