--- a/source/assets/scss/sections/_header-page.scss
+++ b/source/assets/scss/sections/_header-page.scss
@@ -16,10 +16,10 @@
       background-image: url('../images/Slide 1.min.jpg');
     }
     &:nth-child(2) {
-      background-image: url('../images/slide 3.min.jpg');
+      background-image: url('../images/slide 2-1.min.jpg');
     }
     &:nth-child(3) {
-      background-image: url('../images/slide 2.min.jpg');
+      background-image: url('../images/slide 3-1.min.jpg');
     }
   }
 }
